kubernetes/thebiggame/rolebot/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bigbot
  labels:
    app: bigbot
spec:
  selector:
    matchLabels:
      app: bigbot
  template:
    metadata:
      labels:
        app: bigbot
    spec:
      containers:
      - image: ghcr.io/thebiggame/bigbot:latest
        name: bot
        command:
          - /app/bigbot
          - run
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        #resources:
        #  requests:
        #    memory: "40Mi"
        #    cpu: "50m"
        #  limits:
        #    memory: "75Mi"
        #    cpu: "100m"
