kubernetes/thebiggame/rolebot/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bigbot
  labels:
    app: bigbot
spec:
  selector:
    app: bigbot
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
